feat(tools): db.ps1 per interrogare il DB in sola lettura senza avviare l'app
screenshot.ps1 -Probe passa dalle api del bridge e a app chiusa non risponde:
db.ps1 legge il file SQLite direttamente e funziona sempre.

Read-only per costruzione, non per convenzione: DbQuery apre la connessione con
SQLiteConfig.setReadOnly(true), quindi il driver rifiuta ogni DML. Non disturba
il lock dell'app ne la sincronizzazione OneDrive, e SQLite ammette piu lettori:
si puo interrogare anche ad app aperta.

Non installa niente (sqlite3 e Python non sono presenti sulla macchina): usa il
driver sqlite-jdbc gia dentro il fat JAR, con fallback sulla cache ~/.m2, e gira
in source-file mode di Java 25 senza compilazione ne .class.

Ogni esecuzione stampa in testa quale DB ha aperto, con data di modifica.

Tre dettagli non ovvi, documentati in CLAUDE.md perche costano tempo:
- il parametro e -Database e non -Db, che collide con l'alias di -Debug e fa
  rifiutare lo script all'avvio;
- -Dstdout.encoding=UTF-8 sulla riga di comando viene spezzato sul punto da
  PowerShell 5.1, quindi l'UTF-8 lo imposta DbQuery su System.out/err;
- serve --enable-native-access=ALL-UNNAMED o Java 25 antepone quattro WARNING
  a ogni risultato.

Annotato anche che i dati anteriori a marzo 2026 sono importati da un altro
programma e distorti da eredita e saldo mutuo (ottobre 2025 da solo vale il 69%
delle entrate della finestra ago 25 - lug 26): le analisi vanno filtrate dal
2026-01-01.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>